HelloUltraviolet/Fixtures/RejectedSource/DataTypes/GenericContravariantSubtyping/Expected.uv
//! Expected diagnostic metadata for the GenericContravariantSubtyping rejected-source specimen.

expectedDiagnostic("E-TYP-1521", "Sub-Generic-Contravariant-Err")
